--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,14 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="assets/Css/style.css">
-
+  
     <!--JQUERY LINK-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!--Link for logo buttons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Canies Bianca Nelson</title>
 </head>
@@ -81,84 +83,84 @@
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                      <i class="fas fa-plus fa-3x"></i>
+                                        <img id="about-me" src="assets/Images/taco.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
                                 </a>
                                 <div class="portfolio-caption">
-                                  <h4>Threads</h4>
-                                  <p class="text-muted">Illustration</p>
+                                  <h4>The Vibe</h4>
+                                  <p class="text-muted">Front End and Back End</p>
                                 </div>
                               </div>
                               <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                      <i class="fas fa-plus fa-3x"></i>
+                                        <img id="about-me" src="assets/Images/taco.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
                                 </a>
                                 <div class="portfolio-caption">
-                                  <h4>Explore</h4>
-                                  <p class="text-muted">Graphic Design</p>
+                                  <h4>Empire RPG</h4>
+                                  <p class="text-muted">Front End , Back End</p>
                                 </div>
                               </div>
                               <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                      <i class="fas fa-plus fa-3x"></i>
+                                        <img id="about-me" src="assets/Images/taco.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
                                 </a>
                                 <div class="portfolio-caption">
-                                  <h4>Finish</h4>
-                                  <p class="text-muted">Identity</p>
+                                  <h4>The Scraper</h4>
+                                  <p class="text-muted">Front End and Back End</p>
                                 </div>
                               </div>
                               <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                      <i class="fas fa-plus fa-3x"></i>
+                                        <img id="about-me" src="assets/Images/Liri Bot.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
                                 </a>
                                 <div class="portfolio-caption">
-                                  <h4>Lines</h4>
-                                  <p class="text-muted">Branding</p>
+                                  <h4>Liri Bot</h4>
+                                  <p class="text-muted">Back End</p>
                                 </div>
                               </div>
                               <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                      <i class="fas fa-plus fa-3x"></i>
+                                        <img id="about-me" src="assets/Images/taco.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
                                 </a>
                                 <div class="portfolio-caption">
-                                  <h4>Southwest</h4>
-                                  <p class="text-muted">Website Design</p>
+                                  <h4>Trivia Game</h4>
+                                  <p class="text-muted">Front End , Back End </p>
                                 </div>
                               </div>
                               <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                      <i class="fas fa-plus fa-3x"></i>
+                                        <img id="about-me" src="assets/Images/Bamazon.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
                                 </a>
                                 <div class="portfolio-caption">
-                                  <h4>Window</h4>
-                                  <p class="text-muted">Photography</p>
+                                    <h4>Bamazon</h4>
+                                    <p class="text-muted">Back End</p>
                                 </div>
                               </div>
                             </div>
