--- a/portfolio.html
+++ b/portfolio.html
@@ -139,14 +139,14 @@
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                        <img id="about-me" src="assets/Images/taco.png" class="image shadow rounded mb-5" alt="taco">
+                                        <img id="about-me" src="assets/Images/friendfinder.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
                                 </a>
                                 <div class="portfolio-caption">
-                                  <h4>Trivia Game</h4>
-                                  <p class="text-muted">Front End , Back End </p>
+                                  <h4>Friend Finder</h4>
+                                  <p class="text-muted">Front End and Back End </p>
                                 </div>
                               </div>
                               <div class="col-md-4 col-sm-6 portfolio-item">
