--- a/portfolio.html
+++ b/portfolio.html
@@ -83,21 +83,21 @@
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                        <img id="about-me" src="assets/Images/taco.png" class="image shadow rounded mb-5" alt="taco">
+                                        <img id="about-me" src="assets/Images/psychic game.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
                                 </a>
                                 <div class="portfolio-caption">
-                                  <h4>The Vibe</h4>
-                                  <p class="text-muted">Front End and Back End</p>
+                                  <h4>Psychic Game</h4>
+                                  <p class="text-muted">Front End</p>
                                 </div>
                               </div>
                               <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                        <img id="about-me" src="assets/Images/taco.png" class="image shadow rounded mb-5" alt="taco">
+                                        <img id="about-me" src="assets/Images/rpg.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
@@ -111,7 +111,7 @@
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                                   <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                        <img id="about-me" src="assets/Images/taco.png" class="image shadow rounded mb-5" alt="taco">
+                                        <img id="about-me" src="assets/Images/scraper.png" class="image shadow rounded mb-5" alt="taco">
                                     </div>
                                   </div>
                                   <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
@@ -173,6 +173,8 @@
             </div>
         </div>
     </div>
+
+
 
     <div class="push"></div>
     </div>
