--- a/portfolio.html
+++ b/portfolio.html
@@ -180,7 +180,10 @@
     </div>
     <footer class="footer"></footer>
 
-
+    <footer>
+      <hr>
+      <p class="text-center">Bianca Nelson 2020 © Copyright, All Rights Reserved. </p>
+  </footer>
 
 
    
